--- a/src/app/layouts/auth/auth.component.html
+++ b/src/app/layouts/auth/auth.component.html
@@ -1,13 +1,11 @@
 <div>
-  <app-auth-navbar></app-auth-navbar>
+  <app-auth-navbar data-qa="app-auth-navbar"></app-auth-navbar>
   <main>
     <section class="relative w-full h-full py-40 min-h-screen">
-      <div
-        class="absolute top-0 w-full h-full bg-blueGray-800 bg-no-repeat bg-full"
-        style="background-image: url('assets/img/register_bg_2.png')"
-      ></div>
+      <div class="absolute top-0 w-full h-full bg-blueGray-800 bg-no-repeat bg-full"
+        style="background-image: url('assets/img/register_bg_2.png')"></div>
       <router-outlet></router-outlet>
-      <app-footer-small [absolute]="true"></app-footer-small>
+      <app-footer-small data-qa="app-footer-small" [absolute]="true"></app-footer-small>
     </section>
   </main>
 </div>
