--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -1,27 +1,21 @@
 <div class="container mx-auto px-4 h-full">
   <div class="flex content-center items-center justify-center h-full">
     <div class="w-full lg:w-4/12 px-4">
-      <div
-        class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-blueGray-200 border-0"
-      >
+      <div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded-lg bg-blueGray-200 border-0">
         <div class="rounded-t mb-0 px-6 py-6">
           <div class="text-center mb-3">
-            <h6 class="text-blueGray-500 text-sm font-bold">Sign in with</h6>
+            <h6 class="text-blueGray-500 text-sm font-bold" data-qa="Sign-in-title">Sign in with</h6>
           </div>
           <div class="btn-wrapper text-center">
             <button
               class="bg-white active:bg-blueGray-50 text-blueGray-700 font-normal px-4 py-2 rounded outline-none focus:outline-none mr-2 mb-1 uppercase shadow hover:shadow-md inline-flex items-center font-bold text-xs ease-linear transition-all duration-150"
-              type="button"
-              name="btn-github"
-            >
+              type="button" name="btn-github">
               <img alt="..." class="w-5 mr-1" src="assets/img/github.svg" />
               Github
             </button>
             <button
               class="bg-white active:bg-blueGray-50 text-blueGray-700 font-normal px-4 py-2 rounded outline-none focus:outline-none mr-1 mb-1 uppercase shadow hover:shadow-md inline-flex items-center font-bold text-xs ease-linear transition-all duration-150"
-              type="button"
-              name="btn-google"
-            >
+              type="button" name="btn-google">
               <img alt="..." class="w-5 mr-1" src="assets/img/google.svg" />
               Google
             </button>
@@ -34,39 +28,26 @@
           </div>
           <form>
             <div class="relative w-full mb-3">
-              <label
-                class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
-                htmlFor="grid-password"
-              >
+              <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlFor="grid-password">
                 Email
               </label>
-              <input
-                type="email"
+              <input data-qa="email-input" type="email"
                 class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
-                placeholder="Email"
-              />
+                placeholder="Email" />
             </div>
 
             <div class="relative w-full mb-3">
-              <label
-                class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
-                htmlFor="grid-password"
-              >
+              <label class="block uppercase text-blueGray-600 text-xs font-bold mb-2" htmlFor="grid-password">
                 Password
               </label>
-              <input
-                type="password"
+              <input data-qa="password-input" type="password"
                 class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
-                placeholder="Password"
-              />
+                placeholder="Password" />
             </div>
             <div>
               <label class="inline-flex items-center cursor-pointer">
-                <input
-                  id="customCheckLogin"
-                  type="checkbox"
-                  class="form-checkbox border-0 text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded"
-                />
+                <input data-qa="remember-me-checkbox" id="customCheckLogin" type="checkbox"
+                  class="form-checkbox border-0 text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded" />
                 <span class="ml-2 text-sm font-semibold text-blueGray-600">
                   Remember me
                 </span>
@@ -74,10 +55,9 @@
             </div>
 
             <div class="text-center mt-6">
-              <button
+              <button data-qa="sign-in-button"
                 class="bg-blueGray-800 text-white active:bg-blueGray-600 text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full ease-linear transition-all duration-150"
-                type="button"
-              >
+                type="button">
                 Sign In
               </button>
             </div>
@@ -86,12 +66,12 @@
       </div>
       <div class="flex flex-wrap mt-6 relative">
         <div class="w-1/2">
-          <a href="javascript:void(0)" class="text-blueGray-200">
+          <a data-qa="forgot-password-link" href="javascript:void(0)" class="text-blueGray-200">
             <small>Forgot password?</small>
           </a>
         </div>
         <div class="w-1/2 text-right">
-          <a [routerLink]="['/auth/register']" class="text-blueGray-200">
+          <a data-qa="create-new-account-link" [routerLink]="['/auth/register']" class="text-blueGray-200">
             <small>Create new account</small>
           </a>
         </div>
