--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -1,4 +1,4 @@
-<app-auth-navbar></app-auth-navbar>
+<app-auth-navbar data-qa="app-auth-navbar"></app-auth-navbar>
 <main>
   <div
     class="relative pt-16 pb-32 flex content-center items-center justify-center min-h-screen-75"
